ditch MathJax for maruku + blahtex + dvips for latex --> PNG (for noscript, consistent style, etc.)

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 pygments: true
-markdown: rdiscount
+markdown: maruku
+
+maruku:
+  use_tex:    true
+  use_divs:   false
+  png_engine: blahtex
+  png_dir:    images/latex
+  png_url:    /images/latex/
