--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,6 @@ maruku:
   png_engine: blahtex
   png_dir:    images/latex
   png_url:    /images/latex/
+
+# TODO: Enable this and setup redirects from current *.html URLs
+#permalink: pretty
